--- a/app/src/main/res/layout/activity_report_item.xml
+++ b/app/src/main/res/layout/activity_report_item.xml
@@ -26,10 +26,10 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="410dp"
+        android:layout_width="419dp"
         android:layout_height="55dp"
         android:layout_marginBottom="5dp"
-        android:background="#75e7dedc"
+        android:background="#940202"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
