--- a/app/src/main/res/layout/activity_item_lost.xml
+++ b/app/src/main/res/layout/activity_item_lost.xml
@@ -125,7 +125,8 @@
                 android:ems="10"
                 android:gravity="center|start"
                 android:hint="Search"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:minHeight="48dp" />
 
 
         </LinearLayout>
