--- a/app/src/main/res/layout/activity_found_report.xml
+++ b/app/src/main/res/layout/activity_found_report.xml
@@ -225,7 +225,8 @@
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
                 android:dropDownWidth="wrap_content"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                android:entries="@array/category_items"/>
 
             <EditText
                 android:id="@+id/editTextTextMultiLine"
@@ -258,24 +259,28 @@
                 android:inputType="textMultiLine" />
 
             <EditText
-                android:id="@+id/editTextTextMultiLine10"
+                android:id="@+id/editTextContactNumber"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
-                android:ems="10"
-                android:gravity="center|start"
                 android:hint="Contact Number"
-                android:inputType="textMultiLine" />
+                android:gravity="center|start"
+                android:inputType="phone"
+                android:maxLength="11"
+                android:ems="10"
+                android:padding="10dp" />
 
             <EditText
-                android:id="@+id/editTextTextMultiLine13"
+                android:id="@+id/editTextDateFound"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
-                android:ems="10"
                 android:gravity="center|start"
                 android:hint="Date Found"
-                android:inputType="textMultiLine" />
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date"
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/editTextTextMultiLine12"
