--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -73,7 +73,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.027" />
+        app:layout_constraintVertical_bias="0.027"
+        android:entries="@array/category_items"/>
 
     <Button
         android:id="@+id/button9"
@@ -222,24 +223,28 @@
                 android:inputType="textMultiLine" />
 
             <EditText
-                android:id="@+id/editTextTextMultiLine5"
+                android:id="@+id/editTextContactNumber"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
-                android:ems="10"
-                android:gravity="center|start"
                 android:hint="Contact Number"
-                android:inputType="textMultiLine" />
+                android:gravity="center|start"
+                android:inputType="phone"
+                android:maxLength="11"
+                android:ems="10"
+                android:padding="10dp" />
 
             <EditText
-                android:id="@+id/editTextTextMultiLine6"
+                android:id="@+id/editTextDateFound"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
-                android:ems="10"
                 android:gravity="center|start"
                 android:hint="Date Found"
-                android:inputType="textMultiLine" />
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date"
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/editTextTextMultiLine7"
