finished editing all related Lost Activity java file except in categories

--- a/app/src/main/res/layout/activity_lost_details.xml
+++ b/app/src/main/res/layout/activity_lost_details.xml
@@ -7,21 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".LostDetailsActivity">
 
-    <TextView
-        android:id="@+id/textViewHeader"
-        android:layout_width="284dp"
-        android:layout_height="35dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Lost Item Details"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.165" />
-
+    <!-- 🔴 Header Banner -->
     <TextView
         android:id="@+id/textViewBanner"
         android:layout_width="417dp"
@@ -60,26 +46,58 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.045" />
 
-    <!-- Lost Item Details Table -->
+    <!-- 🔴 Page Header -->
+    <TextView
+        android:id="@+id/textViewHeader"
+        android:layout_width="284dp"
+        android:layout_height="35dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Lost Item Details"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.165" />
+
+    <!-- 🟤 Item Image (Same as Found Details) -->
+    <FrameLayout
+        android:id="@+id/frameItemImage"
+        android:layout_width="161dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="#D5C5C5"
+        app:layout_constraintBottom_toTopOf="@+id/tableLostDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewHeader">
+
+        <ImageView
+            android:id="@+id/ivItemImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="Item Image"
+            android:scaleType="centerCrop" />
+    </FrameLayout>
+
+    <!-- 🟢 Lost Item Details Table -->
     <TableLayout
         android:id="@+id/tableLostDetails"
         android:layout_width="388dp"
         android:layout_height="247dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:background="#000000"
         android:padding="0.5dp"
         android:stretchColumns="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintTop_toBottomOf="@id/frameItemImage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewHeader"
-        app:layout_constraintVertical_bias="0.441">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Row 1 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewItemNameLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Item Name:"
@@ -91,10 +109,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 2 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewDescriptionLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Description:"
@@ -106,10 +122,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 3 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewCategoryLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Category:"
@@ -121,10 +135,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 4 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewOwnerLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Owner:"
@@ -136,10 +148,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 5 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewContactLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Contact Number:"
@@ -151,10 +161,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 6 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewDateLossLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Date of Loss:"
@@ -166,10 +174,8 @@
                 android:padding="8dp" />
         </TableRow>
 
-        <!-- Row 7 -->
         <TableRow>
             <TextView
-                android:id="@+id/textViewLocationLossLabel"
                 android:background="@drawable/cell_border"
                 android:padding="8dp"
                 android:text="Location of Loss:"
@@ -182,19 +188,16 @@
         </TableRow>
     </TableLayout>
 
-    <!-- RadioGroup -->
+    <!-- 🟡 Status Section -->
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tableLostDetails"
-        app:layout_constraintVertical_bias="0.663">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <RadioButton
             android:id="@+id/radioFound"
@@ -218,6 +221,7 @@
             android:textSize="13sp" />
     </RadioGroup>
 
+    <!-- 🔵 Spinner -->
     <Spinner
         android:id="@+id/spinner8"
         android:layout_width="86dp"
