--- a/app/src/main/res/layout/activity_lost_report.xml
+++ b/app/src/main/res/layout/activity_lost_report.xml
@@ -223,7 +223,8 @@
                 android:layout_height="48dp"
                 android:background="@android:drawable/editbox_background"
                 android:dropDownWidth="wrap_content"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                android:entries="@array/category_items"/>
 
             <EditText
                 android:id="@+id/editTextTextMultiLine2"
